estructura de la pagina principal del proyecto creada- Nota: abierto a futuras modificaciones

--- a/index.html
+++ b/index.html
@@ -1,10 +1,83 @@
 <!DOCTYPE html>
-	<html lang="es">
+<html lang="es">
+	<!-- Configuración Basica de la pagina-->
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/globalstyle.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Nombre de la pagina-->
 		<title> UfidetProject</title>
 	</head>
+	<!-- Cuerpo de la pagina / aqui va el contenido-->
+	<body>
+		<!-- Cabecera-->
+		<header>
+			<!--Hero-->
+			<div class="hero">
+				<div class="img_hero">
+					<!-- Logo-->
+					<a href="index.html"> <img src="img/hero.jpg" alt="Ufidet_Logo"></a>
+				</div>
+				<div class="title_hero">
+					<!--Nombre de lapagina-->
+					<a href="index.html"> <h1>UfidetProject</h1> </a>
+				</div>
+			</div>
+			<!--menu de direcciones/opciones-->
+			<div class="main_menu">
+				<nav class="menu">
+					<!--MENU de direcciones-->
+					<ul id="content" class="menu">
+						<li> <!-- Pagina principal-->
+							<a href="index.html"> <span class="material-icons-outlined material-icons md-36">article</span><p>Proyecto</p></a>
+						</li>
+						<!--Versiones del proyecto-->
+						<li>
+							<a href="index.html"> <span class="material-icons-outlined material-icons md-36">history</span><p>Release</p></a>
+						</li>
+						<!--Bibliografia-->
+						<li>
+							<a href="index.html"> <span class="material-icons-outlined material-icons md-36">collections_bookmark</span><p>Teorico</p></a>
+						</li>
+					</ul>
+					<!--Menu de Opciones-->
+					<ul class="download" class="menu">
+						<a href="index.html"> <span class="material-icons-outlined material-icons md-36">print</span><p>Descargar</p></a>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<!--Contenido de la web-->
+		<section id="body">
+			<div class="filling"></div>"
+			<!--Publicación-->
+			<div id="body_content">
+				<h2> Ufide Project</h2><br>
+				<img class="body_img" src="img/backgroundfouter.jpg" alt="LLamador de enfermeras">
+				<article class="description">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus deleniti at ea possimus! Dolore quaerat odio facilis optio minima amet quas obcaecati inventore voluptatibus! Temporibus odio et eligendi minima nulla!</p>
+				</article>
+				<!-- Mision del proyecto-->
+				<article class="Content" id="mision">
+					<h3>Misión</h3>
+				</article>
+				<!--Vision del Proyecto-->
+				<article class="Content" id="--Vision">
+					<h3>Visión</h3>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eius eum delectus aliquam est expedita beatae quibusdam ab aspernatur nemo quae praesentium debitis, repellendus natus ex doloremque culpa quasi optio.</p>
+				</article>
+			</div>
+		</section>
+		<!--Pie de pagina-->
+		<footer>
+			<div class="filling"></div>
+			<section id="footer">
+				<h6 class="derechos">&#169 Daniel Nicolas Heredia </h6>
+				<p>Cuando los electrones se mueven las cosas suceden</p>
+				<p>Projecto final de Bioelectronica II. <a href="http://ufidet.salta.gov.ar">Ufidet</a>-Salta</p>
+			</section>
+		</footer>
+	</body>
+</html>
