Estilo visual de la pagina para dispositivos de hasta 320px de ancho - Nota: queda a revisión

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<!-- Configuración Basica de la pagina-->
 	<head>
 		<meta charset="UTF-8">
+		<!--Propiedades visuales de la pagina en /css/globalstyle.css-->
 		<link rel="stylesheet" href="css/globalstyle.css">
+		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,12 +24,12 @@
 				</div>
 				<div class="title_hero">
 					<!--Nombre de lapagina-->
-					<a href="index.html"> <h1>UfidetProject</h1> </a>
+					<a href="index.html"><h1 id="Name">UfidetProject</h1> </a>
 				</div>
 			</div>
 			<!--menu de direcciones/opciones-->
 			<div class="main_menu">
-				<nav class="menu">
+				<nav id="menu">
 					<!--MENU de direcciones-->
 					<ul id="content" class="menu">
 						<li> <!-- Pagina principal-->
@@ -43,7 +45,7 @@
 						</li>
 					</ul>
 					<!--Menu de Opciones-->
-					<ul class="download" class="menu">
+					<ul id="download" class="menu">
 						<a href="index.html"> <span class="material-icons-outlined material-icons md-36">print</span><p>Descargar</p></a>
 					</ul>
 				</nav>
@@ -76,7 +78,7 @@
 			<section id="footer">
 				<h6 class="derechos">&#169 Daniel Nicolas Heredia </h6>
 				<p>Cuando los electrones se mueven las cosas suceden</p>
-				<p>Projecto final de Bioelectronica II. <a href="http://ufidet.salta.gov.ar">Ufidet</a>-Salta</p>
+				<p>Projecto final de Bioelectronica II. <a href="http://ufidet.salta.gov.ar">Ufidet-Salta</a></p>
 			</section>
 		</footer>
 	</body>
