Se agregaron las imagenes, soporte visual de la hoja de cascada responsivo, correcction de la estructura de la pagina- Nota: CSS sujeto a revisión

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 			<div class="hero">
 				<div class="img_hero">
 					<!-- Logo-->
-					<a href="index.html"> <img src="img/hero.jpg" alt="Ufidet_Logo"></a>
+					<a href="index.html"> <img src="img/hero.jpeg" alt="Ufidet_Logo"></a>
 				</div>
 				<div class="title_hero">
 					<!--Nombre de lapagina-->
-					<a href="index.html"><h1 id="Name">UfidetProject</h1> </a>
+					<a href="index.html"><h1 id="Name">Ufidet Project</h1> </a>
 				</div>
 			</div>
 			<!--menu de direcciones/opciones-->
@@ -46,18 +46,21 @@
 					</ul>
 					<!--Menu de Opciones-->
 					<ul id="download" class="menu">
-						<a href="index.html"> <span class="material-icons-outlined material-icons md-36">print</span><p>Descargar</p></a>
+						<!--Descargar ultimo informe-->
+						<li>
+							<a href="index.html"> <span class="material-icons-outlined material-icons md-36">print</span><p>Descargar</p></a>
+						</li>
 					</ul>
 				</nav>
 			</div>
 		</header>
 		<!--Contenido de la web-->
 		<section id="body">
-			<div class="filling"></div>"
+			<div class="filling"></div>
 			<!--Publicación-->
 			<div id="body_content">
 				<h2> Ufide Project</h2><br>
-				<img class="body_img" src="img/backgroundfouter.jpg" alt="LLamador de enfermeras">
+				<img class="body_img" src="/img/backgroundfouter.jpg" alt="LLamador de enfermeras">
 				<article class="description">
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus deleniti at ea possimus! Dolore quaerat odio facilis optio minima amet quas obcaecati inventore voluptatibus! Temporibus odio et eligendi minima nulla!</p>
 				</article>
